--- a/qmd/portfolio/dataviz.qmd
+++ b/qmd/portfolio/dataviz.qmd
@@ -7,8 +7,8 @@ listing:
     - "/dataviz/immunovisual/*.qmd"
     - "/dataviz/tidytuesdayapp/*.qmd"
   type: grid
-  grid-columns: 1  # 1 item per row
-  image-height: '25rem'  # Adjust image size
+  grid-columns: 1  
+  image-height: '25rem'  
   sort: "title" 
 ---
 
