--- a/qmd/visual_portfolio.qmd
+++ b/qmd/visual_portfolio.qmd
@@ -4,6 +4,7 @@ format:
   html:
     template-partials:
       - title-block.html
+header-text: Check out some of my public projects below!
 listing: 
   id: portfolio-listings
   contents: 
