--- a/qmd/about.qmd
+++ b/qmd/about.qmd
@@ -1,5 +1,10 @@
 ---
-title: ""
+title: "About"
+format:
+  html:
+    template-partials:
+      - title-block.html
+header-text: About
 about:
   template: trestles 
   image: ../images/DSC_1003.JPG
@@ -16,9 +21,6 @@ about:
 comments: false
 ---
 
-::: column-page
-## About
-
 I am Natasa and I am a **Computational Biologist \| Bioinformatic Scientist**, working at [Institute of Applied Biosciences](https://www.inab.certh.gr/) (INAB) situated within the [Centre for Research & Technology, Hellas](https://www.certh.gr/root.en.aspx) (CERTH).
 
 I received my **B.Sc.** in **Biochemistry and Biotechnology** from the University of Thessaly where i completed my thesis entitle “Study of genetic variations in patients with haematological malignancies” in collaboration with INAB. Subsequently, i obtained a **M.Sc.** in **Translational Research in Biomedicine** from the Democritus University of Thrace. During my master’s thesis titled ‘Characterization of *TP53* gene mutations in patients with Chronic Lymphocytic Leukemia,’ i became interested in **Bioinformatics** and **Computational Biology**.
@@ -26,4 +28,3 @@ I received my **B.Sc.** in **Biochemistry and Biotechnology** from the Universit
 Currently, my main focus is on ***analyzing** and **visualizing*** Next Generation Sequencing (NGS) data, aiming to extract meaningful biological insights. I am also experienced in creating interactive **web applications** and **websites**, making data exploration and visualization more accessible and user-friendly for researchers.
 
 You can explore some of my work in my [Visual Portfolio](https://natanast.github.io/qmd/visual_portfolio.html).
-:::
