--- a/docs/qmd/visual_portfolio.qmd
+++ b/docs/qmd/visual_portfolio.qmd
@@ -3,7 +3,7 @@ title: "Check out some of my public projects below!"
 format:
   html:
     template-partials:
-      - title-block.html
+      - ../title-block.html
 header-text: Check out some of my public projects below!
 listing: 
   id: portfolio-listings
