--- a/index.qmd
+++ b/index.qmd
@@ -23,7 +23,7 @@ Hello! My name is Natasa and this is my personal page! You're welcome to explore
 
 Bioinformatics Scientist in [Bioinformatics lab](https://biodataanalysisgroup.github.io/), under the supervision of [Dr. Psomopoulos](https://scholar.google.com/citations?user=Fp0LAqsAAAAJ&hl=el&oi=sra), at the [Institute of Applied Biosciences](https://www.inab.certh.gr/) (INAB), situated within the [Centre for Research & Technology, Hellas](https://www.certh.gr/root.en.aspx) (CERTH).
 
-![](../images/1712050337388.jpg){fig-align="center" width="400"}
+![](./images/1712050337388.jpg){fig-align="center" width="400"}
 
 ::: {style="text-align: center; font-size: .75rem; margin-top: -25px;"}
 *Figure caption: Picture from a post on* [LinkedIn](https://www.linkedin.com/feed/update/urn:li:activity:7180859584121561088?utm_source=share&utm_medium=member_desktop).
