--- a/docs/qmd/publications.qmd
+++ b/docs/qmd/publications.qmd
@@ -14,7 +14,9 @@ title: ""
 
 #### 2025
 
--   A.-Z. Kouroutzidou, **A. Anastasiadou**, N. Pechlivanis, M. Gerousi, M. Fitopoulou, P. Rock, C. Zent, C. Chu, F. Psomopoulos, A. Chatzidimitriou, R. Burack, K. Stamatopoulos, S. Laidou, “Dissecting the biology of hairy cell leukemia variant: Insights from whole exome and RNA sequencing”, 67th American Society of Hematology Annual Meeting (ASH), Dec 2025, abs25-7460.
+-   M. Gerousi, A.-Z. Kouroutzidou, A. Iatrou, V. Ljungstrom, **A. Anastasiadou**, S. Laidou, N. Pechlivanis, J. Dubois, A. Puiggros, K. Plevova, T. Chatzikonstantinou, N. Vastarouchas, R. Moia, Z. Davis, X. Yan, M. Alcoceba, B. Ferrer Lores, R. Salgado, R. Collado, A. Athanasiadou, N. Stavrogianni, N. Chiorazzi, R. Walewska, F. Psomopoulos, G. Gaidano, S. Pospisilova, D. Oscier, P. Ghia, B. Espinet, A. Kater, R. Rosenquist, A. Chatzidimitriou, P. Baliakas, K. Stamatopoulos, “Coexisting trisomies of chromosomes 12 and 19 define a cytogenetic subgroup of IgG+ CLL enriched for BIRC3 mutations,” 67th American Society of Hematology Annual Meeting (ASH), *Blood*, vol. 146, Supplement 1, p. 7410, 2025, doi: <https://doi.org/10.1182/blood-2025-7410>.
+
+-   A.-Z. Kouroutzidou, **A. Anastasiadou**, N. Pechlivanis, M. Gerousi, M. Fitopoulou, P. Rock, C. Zent, C. Chu, F. Psomopoulos, A. Chatzidimitriou, R. Burack, K. Stamatopoulos, S. Laidou, “Dissecting the biology of hairy cell leukemia variant: Insights from whole exome and RNA sequencing”, 67th American Society of Hematology Annual Meeting (ASH), *Blood* 2025, 146 (Supplement 1): 5306, doi: <https://doi.org/10.1182/blood-2025-5306>.
 
 -   A. Iatrou, M. Gerousi, N. Pechlivanis, **A. Anastasiadou**, R. Sandaltzopoulos, I. Sakellari, N. Stavrogianni, F. Psomopoulos, A. Agathangelidis, A. Chatzidimitriou, K. Stamatopoulos, “Evidence for a Pre-Switched Population and Unmutated Immunoglobulin Receptors in IgG-Expressing CLL Stereotyped Subset #4, 30th European Hematology Association Congress (EHA)”, June 2025, PF564.
 
